<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_id">539ac48a</string>
    <string name="app_name">X-BIONIC</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_flash">FlashActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="xinlang">新浪账户登录</string>
    <string name="tecent">腾讯账户登录</string>
    <string name="tribe">部落用户登录</string>
    <string name="new_user">新用户用户注册</string>
    <string name="title_activity_tribe_login">TribeLoginActivity</string>
    <string name="login">登录</string>
    <string name="welcome">无限增值服务应用,欢迎您!</string>
    <string name="tribe_user">用户名</string>
    <string name="tribe_pwd">密码</string>
    <string name="title_activity_tribe">TribeActivity</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="title_activity_product_list">ProductListActivity</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="title_activity_shopping_cart">ShoppingCartActivity</string>
    <string name="title_activity_account">AccountActivity</string>

    <item name="tag_first" type="id"></item>
    <item name="tag_second" type="id"></item>
    <item name="tag_third" type="id"></item>

    <string name="title_activity_you_order">YouOrderActivity</string>
    <string name="title_activity_order_detail">OrderDetailActivity</string>
    <string name="title_activity_product_common">ProductCommonActivity</string>
    <string name="title_activity_set_account">SetAccountActivity</string>
    <string name="title_activity_person_info">PersonInfoActivity</string>
    <string name="title_activity_pwd_modify">PwdModifyActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_xintroduce">XIntroduceActivity</string>
    <string name="title_activity_expert">ExpertActivity</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_xxxx">XXXXActivity</string>
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="weibosdk_demo_token_to_string_format_1">Token：%1$s \n有效期：%2$s</string>
    <string name="weibosdk_demo_token_has_existed">Token 仍在有效期内，无需再次登录。</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="weibosdk_demo_cancel_download_weibo">\t取消下载</string>
    <string name="title_activity_address_modify">AddressModifyActivity</string>
    <string name="title_activity_map">MapActivity</string>

</resources>