<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".LoginActivity" >

    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@null"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/btn_login_xinlang"
        style="@style/style_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_btn_login"
        android:text="@string/xinlang" />

    <Button
        android:id="@+id/btn_login_tecent"
        style="@style/style_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login_xinlang"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_btn_login"
        android:text="@string/tecent" />

    <Button
        android:id="@+id/btn_login_tribe"
        style="@style/style_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login_tecent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_btn_login"
        android:text="@string/tribe" />

    <Button
        android:id="@+id/btn_login_new_user"
        style="@style/style_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login_tribe"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/selector_btn_login"
        android:text="@string/new_user" />

    <Button
        android:id="@+id/btn_login_help"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/btn_login_new_user"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/selector_login_help" />

    <Button
        android:id="@+id/btn_login_service_term"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/btn_login_new_user"
        android:layout_marginRight="10dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/selector_login_service_term" />

    <TextView
        android:id="@+id/tv_login_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login_service_term" />

</RelativeLayout>