<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/peoplebackground"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_back" >

        <Button
            android:id="@+id/btn_tribe_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back_btn_normal" />

        <TextView
            android:id="@+id/tv_tribe_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login"
            android:textColor="@color/gray"
            android:textSize="25sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_tribe_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/welcome"
        android:textColor="@color/welcome"
        android:textSize="23sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp" >

        <ImageView
            android:id="@+id/iv_tribe_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:contentDescription="@null"
            android:src="@drawable/personpicture" />

        <EditText
            android:id="@+id/et_tribe_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="18750576807"
            android:background="@drawable/enterbound"
            android:singleLine="true"
            android:hint="@string/tribe_user"
            android:paddingLeft="100dp"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <ImageView
            android:id="@+id/iv_tribe_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:contentDescription="@null"
            android:src="@drawable/keypicture" />

        <EditText
            android:id="@+id/et_tribe_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="zym6871852"
            android:background="@drawable/enterbound"
            android:singleLine="true"
            android:inputType="textPassword"
            android:hint="@string/tribe_pwd"
            android:paddingLeft="100dp"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp" >

        <Button
            android:id="@+id/btn_enter_tribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn_enter_tribe"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
             />
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp" >

        <Button
            android:id="@+id/btn_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn_forget_pwd"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
             />
    </RelativeLayout>

</LinearLayout>